unpackaged/main/default/objects/Product_Inquiry__c/Product_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Product Inquiry</label>
    <nameField>
        <label>Product Inquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>