unpackaged/main/default/objects/Product_Inquiry__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned_To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>