unpackaged/main/default/objects/Product_Inquiry__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time To Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>