unpackaged/main/default/objects/Product_Inquiry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>