unpackaged/main/default/objects/Product_Inquiry__c/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
                <default>true</default>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Technical Specs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>